--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -12,6 +12,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Очередь на посаде
             </NavLink>
         </li>
+        @* <li class="nav-item px-3"> *@
+        @*     <NavLink class="nav-link" href="production"> *@
+        @*         <span class="oi oi-home" aria-hidden="true"></span> &beta; Производство *@
+        @*     </NavLink> *@
+        @* </li> *@
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="addLanding">
                 <span class="oi oi-plus" aria-hidden="true"></span> Добавить в очередь
